--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,14 @@ lib_deps =
 	mbed-mobilewill/ClickButton@0.0.0+sha.8b9a6e8ca865
 	paulstoffregen/Time@^1.6.1
 	adafruit/RTClib@^2.1.3
+	
+[env:uno]
+platform = atmelavr
+board = uno
+framework = arduino
+monitor_speed = 115200
+lib_deps = 
+	paulstoffregen/OneWire@^2.3.7
+	mbed-mobilewill/ClickButton@0.0.0+sha.8b9a6e8ca865
+	paulstoffregen/Time@^1.6.1
+	adafruit/RTClib@^2.1.3
